Bug 1194733 - Don't honor DefaultPrevented for mouseup events in list control frames. r=enndeakin, a=sledru

--HG--
extra : transplant_source : n%7F%A7%96%C6%1C%EA%94%E3%CBZ%BB%AA%9CZ%29%F8%03Va